# deconvATAC

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
docs/: api.md  conf.py  contributing.md  index.md  index.rst  installation.md  requirements.txt  template_usage.md
docs/notebooks/: example.ipynb  index.rst  run_cell2location.ipynb  run_cell2location_russell.ipynb  run_rctd_heart.ipynb  simulate_data_dissociated.ipynb
docs/tutorials/: run_cell2location.md
notebooks/analysis/: analyze_seml.ipynb  rerun_tangram.ipynb  results_table.csv  results_table_cluster_mode.csv  results_table_draw.csv  russell_compute_metrics.ipynb  tangram_cluster_mode.ipynb
notebooks/loading/: human_cardiac_niches.ipynb
notebooks/results/: create_results_table.ipynb  interpret_tangram_results.ipynb  russell.ipynb  russell_compute_ari.ipynb  russell_compute_ari_nmi.ipynb  visualize_russell.ipynb
notebooks/results/tables/: baseline_results.csv  n_cell_types_results.xlsx  results_table.csv  results_table_tangram_cluster_mode.csv  results_table_tangram_no_draw.csv  summarized_results.pq  summarized_results.xlsx  zonation_results.xlsx
notebooks/seml/: deconv_results.ipynb
notebooks/simulations/: artificial_visium.ipynb  sampling_simulation.ipynb  simulation_artificial_visium.ipynb  simulation_heart.ipynb
scripts/cell2location/: README.md  config.yaml  config_heart.yaml  experiment_runner.py  experiment_runner_heart.py
scripts/destvi/: README.md  config.yaml  config_heart.yaml  experiment_runner.py  experiment_runner_heart.py
scripts/rctd/: README.md  config.yaml  config_heart.yaml  experiment_runner.py  experiment_runner_heart.py
scripts/spatialdwls/: README.md  config.yaml  config_russell.yaml  experiment_runner.py  experiment_runner_russell.py
scripts/tangram/: README.md  config.yaml  config_heart.yaml  experiment_runner.py  experiment_runner_heart.py
src/deconvatac/: __init__.py
src/deconvatac/pl/: __init__.py
src/deconvatac/pp/: __init__ .py  __init__.py  feature_selection.py  reads_to_fragments.py
src/deconvatac/tl/: __init__.py  card.py  cell2location.py  destvi.py  lsi.py  metrics.py  moscot.py  rctd.py  simulate.py  spatialdwls.py  tangram.py
tests/: test_basic.py
