[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "deconvATAC"
version = "0.0.1"
description = "Spatial transcriptomics deconvolution methods generalize well to spatial chromatin accessibility data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Anna Schaar"},
    {name = "Sarah Ouologuem"},
    {name = "Laura Martens"},
]
maintainers = [
    {name = "Sarah Ouologuem", email = "sarah.ouologuem@tum.de"},
    {name = "Laura Martens", email = "martensl@in.tum.de"},
    {name = "Anna Schaar", email = "anna.schaar@tum.de"},
]
urls.Documentation = "https://deconvATAC.readthedocs.io/"
urls.Source = "https://github.com/theislab/deconvATAC"
urls.Home-page = "https://github.com/theislab/deconvATAC"
dependencies = [
    "numpy==1.25.2",
    "pandas",
    "scipy==1.11.3",
    "anndata==0.9.2",
    "muon==0.1.5", 
    "scanpy==1.9.5",
    "matplotlib",
    "rpy2==3.5.14",
    "anndata2ri==1.3.1",
    # for debug logging (referenced from the issue template)
    "session-info"
]

[project.optional-dependencies]

cell2location = [
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "scvi-tools==1.0.3",
    "cell2location==0.1.4"
]

tangram = [
    "tangram-sc==1.0.4"
]

destvi = [
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "scvi-tools==1.0.3"
]



dev = [
    "pre-commit",
    "twine>=4.0.2"
]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4",
    "sphinx-book-theme>=1.0.0",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinxext-opengraph",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["deconvatac"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.black]
line-length = 120

[tool.ruff]
src = ["src"]
line-length = 120
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; black gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]
